<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:keepScreenOn="true"
        tools:context=".ticketgenerator.TicketGeneratorActivity">

        <LinearLayout
            android:id="@+id/ticketLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/ticketLayout">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip5Numbers"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/_5_numbers"
                android:textAlignment="center"
                android:textStyle="bold"
                app:chipIcon="@drawable/ic_star_silver" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLine1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/line_1"
                android:textAlignment="center"
                android:textStyle="bold"
                app:chipIcon="@drawable/ic_star_bronze" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLine2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/line_2"
                android:textAlignment="center"
                android:textStyle="bold"
                app:chipIcon="@drawable/ic_star_bronze" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipLine3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/line_3"
                android:textAlignment="center"
                android:textStyle="bold"
                app:chipIcon="@drawable/ic_star_bronze" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipFull"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/full"
                android:textAlignment="center"
                app:chipIcon="@drawable/ic_star_gold"
                app:chipStrokeColor="@android:color/darker_gray" />
        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationSuccess"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/buttonGenerateTicket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate_ticket"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ticketLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>